2006-07-28  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Changed minor version to an odd number (unstable
	version). Added macros that use the minor version number to set
	GIMPRUBY_UNSTABLE properly.

2006-07-28  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/gimp_oo.rb: Added the Drawable class and made Layer and
          Channel inherit from it.
          
        * gimp-lib/pdb.rb: Changed the PDBException to inherit from
          RuntimeException.

2006-07-21  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ext/rbgimp.h
	* ext/conversion.c: Added newline at end of file to quiet compiler.

	* plug-ins/coolmetal-logo.rb.c: Use ParamDef.FONT instead of
	ParamDef.STRING to specify the default font to be used.

2006-07-21  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/rubyfu.rb: Removed some unnecesary code. Clicking 'cancel' in
          the dialog will now work correctly. Interactive procedures that take
          no parameters don't trigger the dialog.
          
        * ext/rbgimpdialog.c: Added a enumeration popup widget. show_dialog()
          now takes an extra parameter for the menu name. The procedure name
          is used as the help_id, and the menu name is used in the dialog title.
          Parameter names now have a ':' appended to their labels.
          
        * plug-ins/test.rb: Added the new parameter type.

2006-07-21  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: Changed spacing, padding and alignment of the
          widgets. Also fixed some memory leaks where the dialog was not
          destroyed, and collect_results() was not getting called to free
          parameter data.
        
        * plug-ins/test.rb: Filled in parameter descriptions for dialog
          functions.
          
2006-07-20  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: Even more parameter types added.
        
        * plug-ins/test.rb: Split the dialog test into two seperate procedures.