@@ -1,3 +1,9 @@
+2006-07-28  Scott Lembcke <lemb0029@gnome.org>
+
+        * Added plug-ins/irbconsole.rb.
+        
+        * plug-ins/Makefile.am: Added irbconsole.rb to the plugins list.
+        
 2006-07-28  Kevin Cozens  <kcozens@cvs.gnome.org>
 
 	* configure.in: Changed minor version to an odd number (unstable
